GUAC-1324: Add right margin and remove position relative to stop text overlap.

--- a/guacamole/src/main/webapp/app/index/styles/ui.css
+++ b/guacamole/src/main/webapp/app/index/styles/ui.css
@@ -191,8 +191,7 @@ div.section {
 
 .caption .activeUserCount {
     font-style: italic;
-    position: relative;
-    right: 1em;
+    margin-right: 1em;
     float: right;
 }
 
